# dkpol-sentiment

./: BACKLOG.md  dkpol-sentiment.cabal
app/: Main.hs
src/: Sentiment.hs  Twitter.hs
