name:                dkpol-sentiment
version:             0.2.0
synopsis:            A web-endpoint for calculating doing sentiment-
                     analysis based on twitter-feeds.
description:         Please see README
homepage:            https://github.com/fredefox/dkpol-sentiment#readme
license:             GPL-3
license-file:        LICENSE
author:              Frederik Hanghøj Iversen
maintainer:          fhi.1990@gmail.com
copyright:           2016 Frederik Hanghøj Iversen
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sentiment
  build-depends:       base >= 4.7 && < 5
                     , text == 1.2.*
                     , http-conduit == 2.1.*
                     , aeson == 0.11.*
                     , resourcet == 1.1.*
                     , bytestring == 0.10.*
                     , http-types == 0.9.*
                     , lens == 4.13.*
                     , aeson-lens == 0.5.*
                     , unordered-containers == 0.2.*
                     , vector == 0.11.*
                     , scientific == 0.3.*
                     , twitter-conduit == 0.2.*
                     , authenticate-oauth == 1.5.*
  default-language:    Haskell2010

executable dkpol-sentiment-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dkpol-sentiment
                     , text == 1.2.*
                     , bytestring == 0.10.*
                     , yaml == 0.8.*
                     , unordered-containers == 0.2.*
                     , twitter-conduit == 0.2.*
                     , twitter-types == 0.7.*
                     , snap-core == 0.9.*
                     , snap-server == 0.9.*
                     , transformers == 0.4.*
                     , aeson == 0.11.*
  default-language:    Haskell2010

test-suite dkpol-sentiment-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dkpol-sentiment
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fredefox/dkpol-sentiment
